--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ digits_project_v1.ipynb
 digits_project_v2.ipynb
 digits_project_v3.ipynb
 digits_project_v4.ipynb
+datasamplesXnoiselevels.png
+datasamplesXnoiselevels_1.png
